yoshimi 1.4.1 M

2016-10-14 Will
* Moved vectors entry to its own button.
* Rearanged icons.
* Added channel switcher to 'Patch Sets' files.
* Moved Channel switcher GUI control from config to Mixer Panel.
* Added channel switcher controls to direct access.
* Updated docs.

2016-10-13 Will
* Direct gui part base controls mostly done.
* Doc updates.

2016-10-12 Will
* Completed direct gui main controls.
* Starting to populate direct gui part level controls.
* Updated docs.
* Direct gui Add, Sub, Pad vol/vsense/pan controls done.

2016-10-11 Will
* Proved direct gui updates correct for main & part controls :)

2016-10-10 Will
* Ringbuffer size corrections.
* Docs punctuation corrections.
* Started to implement direct access -> gui updates.

2016-10-9 Will
* Gave direct access CLI & GUI independent 'from' ring buffers.
* Improved direct access data transfers.
* Small correction to Vector GUI.
* Improved simple message system.

2016-10-8 Will
* Direct vector access almost complete.
* Updated docs.


2016-10-7 Will
* Small corrections to GUI.
* More work on direct Vector access.
* Updated docs.

2016-10-4 Will
* Started implementing direct access to Vectors.

2016-9-28 Will
* Added more info to /dev_notes and /doc.
* Added three new instruments to "Companion"
* No code changes.

2016-9-26 Will
* Bugfix: AddSynth Mod Amp Env enable now works.
* Applied Jespers batch to make scripts bash/dash compatible.
* Corrected and updated docs.

2016-9-25 Will
* Temporarily reverted actual splash screen to original.

2016-9-24 Will
* Merged splash updates from Jesper.

2016-9-23 Will
* Removed duplicate enable Freq Filter command.
* Bugfix: All AddSynth osc commands were going to the modulator.
* Upgraded and tested build instructions.
* Updated docs.

2016-9-22 Will
* Bugfix: direct access SubSynth Freq Env En was quite wrong :(
* Updated docs.

2016-9-21 Will
* Implemented direct access for AddSynth (not fully tested).
* Setting direct access type bit 0 now only echos byte stream.