@@ -1,0 +1,16 @@
+There are two commands that change the way Yoshimi responds to incoming MIDI so that only one of a group of instruments will get note-on events, but all of the group will see note-off ones. These are both in the Mixer Panel.
+
+The 'Solo' drop-down list enables the feature for either 'row' or 'column' mode and also makes the CC spinbox visible.
+
+For both of these modes, if you have a programmable MIDI controller you can set it up to activate a specific part, or to increment/decrement which part in the set is active.
+
+
+You use the CC spinbox to set which incoming CC changes the part that gets new notes. The *value* this CC sends is what performs the actual change. It does this instantly and silently. Most importantly it leaves any existing notes sounding through a note off release and effects tail.
+
+
+In row mode the whole of the first 16 parts are ostensibly receiving channel 1. This is most useful if you want to play live through a piece with multiple instrument changes while playing. It works best with a foot switch that internally stores a channel number and increments/decrements it with every press, then sends it.
+
+Although this uses all of the first 16 parts, you can set the number of parts to 32, and then you can use the 17+ row for normal 1 - 16 channels. Also, if you have vector control set up, Solo intelligently recognises the fact. For each one it finds, it will switch in/out the whole vector column appropriately.
+
+
+For running Solo in column mode you need to have 32 or (preferably) 64 parts set, like this you can have up to 4 parts switched per channel - independently of any other channel. However, this works more like vector control in that you have to switch in steps of 16. For example, to control the channel 4 column you would send 4, 20, 36, 52 to select the wanted part. This is more appropriate for post recording MIDI automation.
