@@ -1,5 +1,10 @@
 yoshimi 1.4.1 M
 
+2016-10-15 Will
+* Changed GUI channel switcher name to 'Solo'.
+* Corrected GUI anomalies with channel switcher.
+* New Solo.txt in doc.
+
 2016-10-14 Will
 * Moved vectors entry to its own button.
 * Rearanged icons.
